No longer hide textbox container on mobile (even though it doesn't work anyway)

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -219,10 +219,6 @@
         width: auto;
     }
     
-    .textbox-container {
-        display: none;
-    }
-    
     .about .mobile {
         display: block;
     }
